<resources>
    <string name="app_name">咱们众筹</string>
    <string name="home">首页</string>
    <string name="product">产品</string>
    <string name="movie">影视</string>
    <string name="find">发现</string>
    <string name="me">我</string>

    <string name="ptsj">平台数据</string>
    <string name="aqbz">安全保障</string>
    <string name="xrhl">新人好礼</string>
    <string name="yqhl">邀请有礼</string>
    <string name="rmtj">热门推荐</string>
    <string name="wtxshbl">委托销售回报率</string>
    <string name="hbl">回报率</string>

    <string name="kj">科技</string>
    <string name="wc">文创</string>
    <string name="ny">农业</string>
    <string name="qbsj">全部</string>
    <string name="zcz">众筹中</string>
    <string name="ywc">已完成</string>

    <string name="yszc">影视众筹</string>
    <string name="cpzc">产品众筹</string>
    
    <string name="hydzp">好运大转盘</string>
    <string name="smtjb">沙漠淘金币</string>
    <string name="wdjf">ZAMA积分</string>
    <string name="wdjf2">我的积分</string>
    <string name="jfsc">积分商城</string>
    <string name="axzd">人脉奖励</string>
    <string name="qg">1000个</string>
    <string name="ly">领88元</string>
    <string name="jl">奖励550元</string>

    <string name="tzjl">投资记录</string>
    <string name="wwcdd">未完成订单</string>
    <string name="wdtz">我的投资</string>
    <string name="wdhp">我的货品</string>
    <string name="wdxm">我的项目</string>
    <string name="fqxm">发起项目</string>
    <string name="tztj">投资统计</string>
    <string name="cwtj">财务统计</string>
    <string name="wdsc">我的收藏</string>

    <string name="qb">钱包</string>
    <string name="ztje">在投金额</string>
    <string name="zd">账单</string>
    <string name="ckjymx">查看交易明细</string>
    
    <string name="ycj">已筹集(元)</string>
    <string name="mbje">目标金额(元)</string>
    <string name="sysj">剩余时间</string>
    <string name="dqsh">到期收货</string>
    <string name="wtxs">委托销售</string>
    <string name="zcbthsk">支持不提货收款</string>
    <string name="xmxq">项目详情</string>
    <string name="zclb">支持列表</string>
    <string name="xmdt">项目动态</string>
    <string name="cjwd">用户评论</string>
    <string name="dixian">--查看更多详情--</string>
    <string name="spgs">商品概述：</string>
    <string name="yjffsj">预计发放时间：</string>
    <string name="yf">运费：</string>
    
    <string name="cpsydd">产品收益达到</string>
    <string name="yjtzsy">预计投资收益</string>
    <string name="lssyl">历史收益率</string>
    <string name="syjsq">收益计算器</string>
    <string name="yqhyyqtz">邀请好友一起投资</string>
    <string name="ljtz">立即投资</string>
    <string name="tzr">投资人</string>
    <string name="je">金额</string>
    <string name="rq">日期</string>
    <string name="sm">说明</string>
    <string name="dhxq">兑换详情</string>

    <string name="gmsl">购买数量</string>
    <string name="thsl">提货数量(件)</string>
    <string name="wtxssl">委托销售数量(件)</string>
    <string name="wtxsslw">委托销售数量</string>
    <string name="tjdd">提交订单</string>
    <string name="psfs">配送方式</string>
    <string name="wtxszq">委托销售周期</string>
    <string name="wtxsyjsyl">委托销售预计收益率</string>
    <string name="jian">件</string>
    <string name="kdmy">快递\t免邮</string>
    <string name="hj">件商品\t合计:</string>
    <string name="th">提货</string>
    <string name="yjdqsy">预计到期收益</string>
    <string name="yjdqsyy">预计到期收益(元)</string>
    <string name="djj">代金券</string>
    <string name="hjje">合计:\t\t￥</string>
    <string name="bz">备注（30字以内）</string>
    <string name="zcxq">支持详情</string>
    <string name="ckqbpl">查看全部评论</string>
    <string name="zfxq">支付详情</string>
    <string name="zfsysj">支付剩余时间</string>
    <string name="zfje">支付金额:</string>
    <string name="zfxm">支付项目:</string>
    <string name="yhkzf">银行卡支付</string>
    <string name="qbye">钱包余额:</string>
    <string name="qbyew">钱包余额</string>
    <string name="lianlianzhifu">支付服务由连连支付提供,无需开通网银</string>
    <string name="zfbzf">支付宝支付</string>
    <string name="zhifubao">推荐有支付宝账号的用户使用</string>
    <string name="wxzf">微信支付</string>
    <string name="weixinzhifu">推荐安装微信5.0及以上版本用户使用</string>
    <string name="qr">确认</string>
    <string name="tzje">投资金额</string>
    <string name="xmmc">项目名称</string>
    <string name="xszqyj">销售周期(预计)</string>
    <string name="yjnhsyl">预计年化收益率</string>
    <string name="wtrdbty">我已阅读并同意</string>
    <string name="xieyi">《ZAMA+协议》</string>
    <string name="qrtz">确认投资</string>
    <string name="qsmc">期数-名称</string>
    <string name="sjsyl">实际收益率</string>
    <string name="tips">历史收益率仅供参考以实际情况为准</string>
    <string name="spxq">商品详情</string>
    <string name="spmc">商品名称:</string>
    <string name="spjg">商品价格:</string>
    <string name="spgg">商品规格:</string>
    <string name="yqsyfh">预期分红收益</string>
    <string name="yjkdbx">预计可得本息(元)</string>
    <string name="cpsyddy">产品收益到达(元)</string>
    <string name="dh">电话</string>
    <string name="xm">姓名</string>
    <string name="kh">卡号</string>
    <string name="yh">银行</string>
    <string name="sfz">身份证</string>
    <string name="qsrzsxm">请输入您的真实姓名</string>
    <string name="qsrsfzh">请输入您的身份证号</string>
    <string name="qsryhkh">请输入您的银行卡号</string>
    <string name="bdyhkhjyz">绑定银行卡号将方便您于平台提现及付款</string>
    <string name="sjr">收件人</string>
    <string name="lxdh">联系电话</string>
    <string name="xxdz">详细地址</string>
    <string name="qrsc">确认删除</string>
    <string name="qsrczje">请输入充值金额</string>
    <string name="zhxx">账户信息</string>
    <string name="ccmrsynbd">此处默认使用您绑定的银行卡进行充值</string>
    <string name="qrcz">确认充值</string>
    <string name="bczdktx">本次最多可提现(元)</string>
    <string name="qsrtxje">请输入提现金额</string>
    <string name="qrtx">确认提现</string>
    <string name="mssf">免手续费</string>
    <string name="tx_tip1">提现成功后将于</string>
    <string name="tx_time">24小时</string>
    <string name="tx_tip2">内到帐（节假日顺延）</string>
    <string name="tx_tip3">本周您还可以免手续提现</string>
    <string name="tx_num">1次</string>
    <string name="grzl">个人资料</string>
    <string name="wdwwm">我的二维码</string>
    <string name="smrz">实名认证</string>
    <string name="ssmm">手势密码</string>
    <string name="gywm">关于我们</string>
    <string name="cjwt">常见问题</string>
    <string name="kfdh">客服电话</string>
    <string name="yjfk">意见反馈</string>
    <string name="tcdl">退出登录</string>
    <string name="wrz">未认证</string>
    <string name="yrz">已认证</string>
    <string name="phone">400-027-5671</string>
    <string name="bb">V1.2</string>
    <string name="grzx">个人中心</string>
    <string name="shdz">收货地址</string>
    <string name="xgmm">修改密码</string>
    <string name="zcsq">转出申请已提交，等待银行处理</string>
    <string name="yjdzsj">预计到账时间</string>
    <string name="txtip">提现一般为24小时内到账，周一到周四15:00之后提现次日到账，周五15:00之后提现将顺延至周一到账。国家法定节假日提现将顺延至工作日到账。</string>
    <string name="jgxq">结果详情</string>
    <string name="wc2">完成</string>
    <string name="jt">今天</string>
    <string name="ksjssy">开始计算收益</string>
    <string name="sydz">收益到账</string>
    <string name="xxzx">消息中心</string>
    <string name="mrdz">默认地址</string>
    <string name="bj">编辑</string>
    <string name="sc">删除</string>
    <string name="fbhint">请在此填写您的意见以及建议</string>
    <string name="tj">提交</string>
    <string name="yhfk">用户反馈</string>
    <string name="zh">账号</string>
    <string name="nl">年龄</string>
    <string name="xb">性别</string>
    <string name="qrxg">确认修改</string>
    <string name="info_tip">已绑定的银行卡若无法成功提现，请进入微信公众号联系微信客服进行变更。</string>
    <string name="yjnhhbl">预计年化回报率</string>
    <string name="qx">期限</string>
    <string name="hkfs">还款方式</string>
    <string name="cjsj">创建时间</string>
    <string name="cjsjm">创建时间:</string>
    <string name="dqsj">到期时间</string>
    <string name="gmje">购买金额</string>
    <string name="jsjgjgck">计算结果仅供参考以实际情况为准</string>
    <string name="cksysm">查看收益说明</string>

    <string name="ddbh">订单编号:</string>
    <string name="sdsj">送达时间:</string>
    <string name="ydbh">运单编号:</string>
    <string name="ddh">订单号:</string>
    <string name="ckwl">查看物流</string>
    <string name="scdd">删除订单</string>
    <string name="jycg">交易成功</string>
    <string name="yfh">已发货</string>
    <string name="wfh">未发货</string>
    <string name="dfk">代付款</string>
    <string name="yfk">已付款</string>
    <string name="hjm">合计:</string>
    <string name="thslw">提货数量</string>
    <string name="yfw">运费</string>
    <string name="zffs">支付方式:</string>
    <string name="qxdd">取消订单</string>
    <string name="fk">付款</string>
    <string name="sfje">实付金额</string>
    <string name="xszq">销售周期</string>
    <string name="yuan">(元)</string>
    <string name="yuji">(预计)</string>
    <string name="wjmmw">忘记密码？</string>
    <string name="dl">登陆</string>
    <string name="qsrndsjh">请输入您的手机号</string>
    <string name="qsrmm">请输入密码</string>
    <string name="mm">密码</string>
    <string name="xyh">新用户</string>
    <string name="yqm">邀请码</string>
    <string name="qsryqm">请输入邀请码</string>
    <string name="rz">认证</string>
    <string name="yzm">验证码</string>
    <string name="xyb">下一步</string>
    <string name="tip4">密码为6-12位字符包含数字、字母符号</string>
    <string name="qszmm">请设置密码</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="qsrsjh">请输入您的手机号</string>
    <string name="hqyzm">获取验证码</string>
    <string name="zc">注册</string>
    <string name="ydty">我已阅读并同意</string>
    <string name="xy">《ZAMA+协议》</string>
    <!--手势密码界面-->
    <string name="szssmm">设置手势密码</string>
    <string name="qhzssmm">请绘制手势图案</string>
    <string name="ss_tips">开启客户端时将启用手势密码</string>
    <!--创建手势密码界面-->
    <string name="gesture_tip1">你可以创建一个解锁图案，这样他人在借\n用你的手机时，将无法打开应用。</string>
    <string name="cjssmm">创建手势密码</string>
    <string name="qhzssm">请绘制手势密码</string>
    <!--银币充值-->
    <string name="ybcz">银币充值</string>
    <string name="yehb">余额：100 积分</string>
    <string name="hyb">100积分</string>
    <string name="tyb">1000积分</string>
    <string name="wyb">10000积分</string>
    <string name="qtse">其他数额</string>
    <string name="qbyek">钱包余额（</string>
    <string name="kyk">可用）</string>
    <string name="qrgm">确认购买</string>
    <string name="xj">小计</string>
    <string name="cz">充值</string>
    <string name="tx">提现</string>
    <string name="dhx">兑换需</string>
    <string name="jf">积分</string>
    <string name="fifty">50元</string>
    <string name="twenty">20元</string>
    <string name="ten">10元</string>
    <!--商城兑换界面-->
    <string name="cpsm">产品说明</string>
    <string name="syfs">使用方式</string>
    <string name="yjsy">预计收益</string>
    <string name="qrdh">确认兑换</string>
    <string name="qrdd">确认订单</string>
    <string name="yb">银币</string>
    <string name="xyou">现有</string>
    <string name="pz">拍照</string>
    <string name="csjxcxz">从手机相册选择</string>

    <string name="wtjdhy">我推荐的好友</string>
    <string name="ydrm">(一度人脉)</string>
    <string name="rmjlz">人脉奖励中...</string>
    <string name="zcrs">注册人数</string>
    <string name="smrs">实名人数</string>
    <string name="ytzrs">已投资人数</string>
    <string name="hytkdhy">好友推荐的好友</string>
    <string name="edrm">(二度人脉)</string>
    <string name="rmkwndlfhjl">人脉可为您带来丰厚的奖励，详情请查看</string>
    <string name="jlgz">“奖励规则”</string>
    <string name="hyjl">好友奖励</string>
    <string name="zamajf">ZAMA积分</string>
    <string name="ljgm">立即购买</string>
    <string name="bpbyb">奔跑吧金币</string>
    <string name="ljsy">立即使用</string>
    <string name="sz">设置</string>
    <string name="ljdl">立即登录</string>
    <string name="none">——.——</string>
    <string name="qsrzfmm">请输入支付密码</string>
    <string name="fkm">付款</string>
    <string name="qxm">取消</string>
    <string name="qd">确定</string>
    <string name="ts">提示</string>
    <string name="czswcg">确定放弃当前交易？</string>
    <string name="qrtcdqzh">确定退出当前账号？</string>
    <string name="szsxtj">设置筛选条件</string>
    <string name="qbm">全部</string>
    <string name="sr">收入</string>
    <string name="hk">回款</string>
    <string name="jlm">奖励</string>
    <string name="zcm">支出</string>
    <string name="tz">投资</string>
    <string name="qt">其它</string>
    <!--<string name="bdyhkhjyz">绑定银行卡号将方便您于平台提现及付款</string>-->
</resources>
