<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.jdyy.cfunding.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.jdyy.cfunding.view.NoScrollViewPager
            android:id="@+id/noScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/xian"
        android:background="@color/black70"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <Button
                android:id="@+id/btn_login_now"
                style="@style/mySureButton"
                android:layout_centerInParent="true"
                android:text="@string/ljdl"/>
        </RelativeLayout>
    </RelativeLayout>
    <View
        android:id="@+id/xian"
        android:layout_above="@+id/rg_menu"
        style="@style/xian"/>
    <RadioGroup
        android:id="@+id/rg_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/myRadioButton"
            android:checked="true"
            android:drawableTop="@drawable/radio_home_selector"
            android:text="@string/home"/>

        <RadioButton
            android:id="@+id/rb_product"
            style="@style/myRadioButton"
            android:drawableTop="@drawable/radio_product_selector"
            android:text="@string/product"
            />

        <RadioButton
            android:id="@+id/rb_movie"
            style="@style/myRadioButton"
            android:drawableTop="@drawable/radio_movie_selector"
            android:text="@string/movie"/>

        <RadioButton
            android:id="@+id/rb_find"
            style="@style/myRadioButton"
            android:drawableTop="@drawable/radio_find_selector"
            android:text="@string/find"/>

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/myRadioButton"
            android:drawableTop="@drawable/radio_me_selector"
            android:text="@string/me"/>
    </RadioGroup>
</RelativeLayout>
