<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/include"
        layout="@layout/head"/>

    <RelativeLayout
        android:id="@+id/tx_top"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/include"
        android:background="@color/blue"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv"
            style="@style/twoWrapLayout"
            android:layout_below="@+id/tv_deposit_sum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_left24"
            android:text="@string/bczdktx"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size26"/>

        <TextView
            android:id="@+id/tv_deposit_sum"
            style="@style/twoWrapLayout"
            android:layout_centerHorizontal="true"
            android:text="611111"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size54"/>
    </RelativeLayout>

    <View
        android:id="@+id/tx_xian3"
        style="@style/xian"
        android:layout_below="@id/tx_top"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/tx_jine"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tx_xian3"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_deposit_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left24"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/qsrtxje"
            android:inputType="numberDecimal"
            android:textColor="@color/text_hot_color"
            android:textColorHint="@color/b_nine_color"/>

        <TextView
            android:id="@+id/tv_deposit_charge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_right24"
            android:gravity="center_vertical|right"
            android:text="@string/mssf"
            android:textColor="@color/detail_red"
            android:textSize="@dimen/text_size30"/>
    </LinearLayout>

    <View
        android:id="@+id/tx_xian4"
        style="@style/xian"
        android:elevation="1px"
        android:layout_below="@id/tx_jine"/>

    <View
        android:id="@+id/tx_xian5"
        style="@style/xian"
        android:layout_below="@id/tx_xian4"
        android:layout_marginTop="8dp"/>

    <RelativeLayout
        android:id="@+id/tx_zh"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tx_xian5"
        android:background="@color/white">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/zhxx"/>


        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tx_dh"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tx_zh"
        android:background="@color/white">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/dh"/>

        <TextView
            android:id="@+id/tv_deposit_phone"
            style="@style/MyRightTextStyle"/>

        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tx_xm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tx_dh"
        android:background="@color/white">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/xm"/>

        <TextView
            android:id="@+id/tv_deposit_name"
            style="@style/MyRightTextStyle"/>

        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tx_kh"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tx_xm"
        android:background="@drawable/shadow">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/kh"/>

        <TextView
            android:id="@+id/tv_deposit_card"
            style="@style/MyRightTextStyle"/>

        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tx_tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_kh"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:src="@mipmap/icon_tx"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="5dp"
            android:gravity="bottom"
            android:text="@string/tx_tip1"
            android:textColor="@color/eight_e_color"
            android:textSize="@dimen/text_size24"/>

        <TextView
            android:id="@+id/tv_deposit_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:gravity="bottom"
            android:text="@string/tx_time"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:gravity="bottom"
            android:text="@string/tx_tip2"
            android:textColor="@color/eight_e_color"
            android:textSize="@dimen/text_size24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_tip1"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="33dp"
            android:gravity="bottom"
            android:text="@string/tx_tip3"
            android:textColor="@color/eight_e_color"
            android:textSize="@dimen/text_size24"/>

        <TextView
            android:id="@+id/tv_deposit_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:gravity="bottom"
            android:text="@string/tx_num"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size24"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_deposit_sure"
        style="@style/mySureButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/qrtx"/>
</RelativeLayout>