<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/include"
        layout="@layout/head"/>

    <View
        android:id="@+id/cz_xian"
        style="@style/xian"
        android:layout_below="@+id/include"/>

    <View
        android:id="@+id/cz_xian2"
        style="@style/xian"
        android:layout_below="@+id/cz_xian"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/tx_jine"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/cz_xian2"
        android:background="@color/white"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left24"
            android:layout_marginRight="@dimen/margin_right24"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/qsrczje"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/text_hot_color"
            android:textColorHint="@color/b_nine_color"/>


    </LinearLayout>

    <View
        android:id="@+id/tx_xian4"
        style="@style/xian"
        android:layout_below="@id/tx_jine"
        android:elevation="1px"/>

    <View
        android:id="@+id/tx_xian5"
        style="@style/xian"
        android:layout_below="@id/tx_xian4"
        android:layout_marginTop="8dp"/>

    <RelativeLayout
        android:id="@+id/tx_zh"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tx_xian5"
        android:background="@color/white">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/zhxx"/>


        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cz_dh"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tx_zh"
        android:background="@color/white">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/dh"/>

        <TextView
            android:id="@+id/tv_real_phone"
            style="@style/MyRightTextStyle"/>

        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cz_xm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/cz_dh"
        android:background="@color/white">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/xm"/>

        <TextView
            android:id="@+id/tv_real_name"
            style="@style/MyRightTextStyle"/>

        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cz_kh"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/cz_xm"
        android:background="@drawable/shadow">

        <TextView
            style="@style/MyTextStyle"
            android:text="@string/kh"/>

        <TextView
            android:id="@+id/tv_bank_card"
            style="@style/MyRightTextStyle"/>

        <View
            style="@style/xian"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cz_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cz_kh"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="@dimen/margin_left24"
            android:src="@mipmap/icon_tx"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/ccmrsynbd"
            android:textColor="@color/eight_e_color"
            android:textSize="@dimen/text_size24"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_recharge"
        style="@style/mySureButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/qrcz"/>

</RelativeLayout>